@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Fix cancelling redirection window in basic mode (Bug #14002).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -3844,7 +3844,7 @@
    <date>2015-04-28</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Fix cancelling redirection window in basic mode (Bug #14002).
    </notes>
   </release>
  </changelog>
